- Added menu-like element mentioned in issue #1. This collapses the left column and adds a single clickable element to see all the id links. This generates a collapsable menu type element in order to show just the current active element on small screens. - Solved scroll position when changing the screen size and going past the breakpoint. - Solves #1 and #2.

--- a/backend.html
+++ b/backend.html
@@ -31,36 +31,58 @@
 
       <div class="inner-wrap">
         <!-- left column start -->
-        <div class="config-left-column column-element">
+        <div class="config-left-column column-element" id="config-left-column">
+
+          <!-- current active link holder start -->
+          <div class="current-active-link is-active" id="active-link-display" aria-hidden="true">
+            <a id="current-active-link"></a>
+          </div>
+          <!-- current active link holder end // -->
+
           <ul class="tab-id-list" id="tab-id-list">
             <li class="tab-id-element is-active" role="presentation">
               <a class="tab-id-link" href="tab-content-panel-1" aria-selected="true" aria-controls="tab-content-panel-1" id="tab-content-panel-1-link">
-                Lorem ipsum
+                Lorem ipsum 1
               </a>
             </li>
             <li class="tab-id-element" role="presentation">
               <a class="tab-id-link" href="tab-content-panel-2" aria-selected="false" aria-controls="tab-content-panel-2" id="tab-content-panel-2-link">
-                Lorem ipsum
+                Lorem ipsum 2
               </a>
             </li>
             <li class="tab-id-element" role="presentation">
               <a class="tab-id-link" href="tab-content-panel-3" aria-selected="false" aria-controls="tab-content-panel-3" id="tab-content-panel-3-link">
-                Lorem ipsum
+                Lorem ipsum 3
               </a>
             </li>
             <li class="tab-id-element" role="presentation">
               <a class="tab-id-link" href="tab-content-panel-4" aria-selected="false" aria-controls="tab-content-panel-4" id="tab-content-panel-4-link">
-                Lorem ipsum
+                Lorem ipsum 4
               </a>
             </li>
             <li class="tab-id-element" role="presentation">
               <a class="tab-id-link" href="tab-content-panel-5" aria-selected="false" aria-controls="tab-content-panel-5" id="tab-content-panel-5-link">
-                Lorem ipsum
+                Lorem ipsum 5
               </a>
             </li>
             <li class="tab-id-element" role="presentation">
               <a class="tab-id-link" href="tab-content-panel-6" aria-selected="false" aria-controls="tab-content-panel-6" id="tab-content-panel-6-link">
-                Lorem ipsum
+                Lorem ipsum 6
+              </a>
+            </li>
+            <li class="tab-id-element" role="presentation">
+              <a class="tab-id-link" href="tab-content-panel-4" aria-selected="false" aria-controls="tab-content-panel-4" id="tab-content-panel-4-link">
+                Lorem ipsum 4
+              </a>
+            </li>
+            <li class="tab-id-element" role="presentation">
+              <a class="tab-id-link" href="tab-content-panel-5" aria-selected="false" aria-controls="tab-content-panel-5" id="tab-content-panel-5-link">
+                Lorem ipsum 5
+              </a>
+            </li>
+            <li class="tab-id-element" role="presentation">
+              <a class="tab-id-link" href="tab-content-panel-6" aria-selected="false" aria-controls="tab-content-panel-6" id="tab-content-panel-6-link">
+                Lorem ipsum 6
               </a>
             </li>
           </ul>
